Bug 769431 - Correlate power data from Intel Power Gadget in performance profiles. r=BenWa